ANTLR4/RegexParser.java
// Generated from Regex.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RegexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OCTAL=1, HEX=2, TAB=3, LF=4, CR=5, OTH_ESC=6, DEFINED_CH=7, BOUNDARY=8, 
		ANDAND=9, AND=10, COLON=11, COMMA=12, SEMI=13, LPAREN=14, RPAREN=15, LBRACE=16, 
		RBRACE=17, LBRACK=18, RBRACK=19, LT=20, GT=21, EQUAL=22, QUESTION=23, 
		STAR=24, SLASH=25, PLUS=26, MINUS=27, OR=28, DOLLAR=29, DOT=30, TLIDE=31, 
		ESC=32, CARET=33, EXCLA=34, WS=35, ALPHABET=36, NUMBER=37, OTHER_SYMBOL=38;
	public static final int
		RULE_regex = 0, RULE_exprlist = 1, RULE_expr = 2, RULE_block = 3, RULE_operand = 4, 
		RULE_quantifier = 5, RULE_ranger = 6, RULE_lookaheadbehind = 7, RULE_escape_operand = 8, 
		RULE_escape_punctual = 9, RULE_digit = 10, RULE_dec = 11, RULE_octal = 12, 
		RULE_hex = 13, RULE_alphabet = 14, RULE_escape_special = 15, RULE_other_operand = 16, 
		RULE_character_class = 17, RULE_tokeninclass = 18, RULE_esc_in_cc = 19, 
		RULE_factor_in_cc = 20, RULE_alphanumeric = 21, RULE_other_in_cc = 22, 
		RULE_defined_character = 23, RULE_boundary = 24;
	public static final String[] ruleNames = {
		"regex", "exprlist", "expr", "block", "operand", "quantifier", "ranger", 
		"lookaheadbehind", "escape_operand", "escape_punctual", "digit", "dec", 
		"octal", "hex", "alphabet", "escape_special", "other_operand", "character_class", 
		"tokeninclass", "esc_in_cc", "factor_in_cc", "alphanumeric", "other_in_cc", 
		"defined_character", "boundary"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'\\t'", "'\\n'", "'\\r'", null, null, null, "'&&'", 
		"'&'", "':'", "','", "';'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"'<'", "'>'", "'='", "'?'", "'*'", "'/'", "'+'", "'-'", "'|'", "'$'", 
		"'.'", "'~'", "'\\'", "'^'", "'!'", "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OCTAL", "HEX", "TAB", "LF", "CR", "OTH_ESC", "DEFINED_CH", "BOUNDARY", 
		"ANDAND", "AND", "COLON", "COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", 
		"RBRACE", "LBRACK", "RBRACK", "LT", "GT", "EQUAL", "QUESTION", "STAR", 
		"SLASH", "PLUS", "MINUS", "OR", "DOLLAR", "DOT", "TLIDE", "ESC", "CARET", 
		"EXCLA", "WS", "ALPHABET", "NUMBER", "OTHER_SYMBOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Regex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RegexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RegexContext extends ParserRuleContext {
		public List<ExprlistContext> exprlist() {
			return getRuleContexts(ExprlistContext.class);
		}
		public ExprlistContext exprlist(int i) {
			return getRuleContext(ExprlistContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(RegexParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(RegexParser.OR, i);
		}
		public RegexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterRegex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitRegex(this);
		}
	}

	public final RegexContext regex() throws RecognitionException {
		RegexContext _localctx = new RegexContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_regex);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			exprlist();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(51);
				match(OR);
				setState(52);
				exprlist();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprlistContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterExprlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitExprlist(this);
		}
	}

	public final ExprlistContext exprlist() throws RecognitionException {
		ExprlistContext _localctx = new ExprlistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OCTAL) | (1L << HEX) | (1L << TAB) | (1L << LF) | (1L << CR) | (1L << OTH_ESC) | (1L << DEFINED_CH) | (1L << BOUNDARY) | (1L << AND) | (1L << COLON) | (1L << COMMA) | (1L << SEMI) | (1L << LPAREN) | (1L << LBRACE) | (1L << RBRACE) | (1L << LBRACK) | (1L << LT) | (1L << GT) | (1L << EQUAL) | (1L << SLASH) | (1L << MINUS) | (1L << DOLLAR) | (1L << DOT) | (1L << TLIDE) | (1L << ESC) | (1L << CARET) | (1L << EXCLA) | (1L << WS) | (1L << ALPHABET) | (1L << NUMBER) | (1L << OTHER_SYMBOL))) != 0)) {
				{
				{
				setState(58);
				expr();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public LookaheadbehindContext lookaheadbehind() {
			return getRuleContext(LookaheadbehindContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(64);
				lookaheadbehind();
				}
				break;
			}
			setState(67);
			block();
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(68);
				quantifier();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public OperandContext operand() {
			return getRuleContext(OperandContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(RegexParser.LPAREN, 0); }
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RegexParser.RPAREN, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OCTAL:
			case HEX:
			case TAB:
			case LF:
			case CR:
			case OTH_ESC:
			case DEFINED_CH:
			case BOUNDARY:
			case AND:
			case COLON:
			case COMMA:
			case SEMI:
			case LBRACE:
			case RBRACE:
			case LBRACK:
			case LT:
			case GT:
			case EQUAL:
			case SLASH:
			case MINUS:
			case DOLLAR:
			case DOT:
			case TLIDE:
			case ESC:
			case CARET:
			case EXCLA:
			case WS:
			case ALPHABET:
			case NUMBER:
			case OTHER_SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				operand();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(LPAREN);
				setState(73);
				regex();
				setState(74);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperandContext extends ParserRuleContext {
		public Escape_operandContext escape_operand() {
			return getRuleContext(Escape_operandContext.class,0);
		}
		public AlphabetContext alphabet() {
			return getRuleContext(AlphabetContext.class,0);
		}
		public DigitContext digit() {
			return getRuleContext(DigitContext.class,0);
		}
		public Character_classContext character_class() {
			return getRuleContext(Character_classContext.class,0);
		}
		public Defined_characterContext defined_character() {
			return getRuleContext(Defined_characterContext.class,0);
		}
		public BoundaryContext boundary() {
			return getRuleContext(BoundaryContext.class,0);
		}
		public Other_operandContext other_operand() {
			return getRuleContext(Other_operandContext.class,0);
		}
		public OperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitOperand(this);
		}
	}

	public final OperandContext operand() throws RecognitionException {
		OperandContext _localctx = new OperandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operand);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				escape_operand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				alphabet();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				digit();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				character_class();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				defined_character();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				boundary();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				other_operand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuantifierContext extends ParserRuleContext {
		public List<TerminalNode> QUESTION() { return getTokens(RegexParser.QUESTION); }
		public TerminalNode QUESTION(int i) {
			return getToken(RegexParser.QUESTION, i);
		}
		public TerminalNode STAR() { return getToken(RegexParser.STAR, 0); }
		public List<TerminalNode> PLUS() { return getTokens(RegexParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(RegexParser.PLUS, i);
		}
		public RangerContext ranger() {
			return getRuleContext(RangerContext.class,0);
		}
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterQuantifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitQuantifier(this);
		}
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_quantifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTION:
				{
				setState(87);
				match(QUESTION);
				}
				break;
			case STAR:
				{
				setState(88);
				match(STAR);
				}
				break;
			case PLUS:
				{
				setState(89);
				match(PLUS);
				}
				break;
			case LBRACE:
				{
				setState(90);
				ranger();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==QUESTION || _la==PLUS) {
				{
				setState(93);
				_la = _input.LA(1);
				if ( !(_la==QUESTION || _la==PLUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangerContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(RegexParser.LBRACE, 0); }
		public TerminalNode COMMA() { return getToken(RegexParser.COMMA, 0); }
		public TerminalNode RBRACE() { return getToken(RegexParser.RBRACE, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(RegexParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(RegexParser.NUMBER, i);
		}
		public RangerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ranger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterRanger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitRanger(this);
		}
	}

	public final RangerContext ranger() throws RecognitionException {
		RangerContext _localctx = new RangerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ranger);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LBRACE);
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				match(NUMBER);
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMBER );
			setState(102);
			match(COMMA);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER) {
				{
				{
				setState(103);
				match(NUMBER);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LookaheadbehindContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(RegexParser.LPAREN, 0); }
		public TerminalNode QUESTION() { return getToken(RegexParser.QUESTION, 0); }
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(RegexParser.RPAREN, 0); }
		public TerminalNode EQUAL() { return getToken(RegexParser.EQUAL, 0); }
		public TerminalNode EXCLA() { return getToken(RegexParser.EXCLA, 0); }
		public TerminalNode LT() { return getToken(RegexParser.LT, 0); }
		public TerminalNode GT() { return getToken(RegexParser.GT, 0); }
		public LookaheadbehindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lookaheadbehind; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterLookaheadbehind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitLookaheadbehind(this);
		}
	}

	public final LookaheadbehindContext lookaheadbehind() throws RecognitionException {
		LookaheadbehindContext _localctx = new LookaheadbehindContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lookaheadbehind);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(LPAREN);
			setState(112);
			match(QUESTION);
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUAL:
				{
				setState(113);
				match(EQUAL);
				}
				break;
			case EXCLA:
				{
				setState(114);
				match(EXCLA);
				}
				break;
			case LT:
				{
				setState(115);
				match(LT);
				setState(116);
				_la = _input.LA(1);
				if ( !(_la==EQUAL || _la==EXCLA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case GT:
				{
				setState(117);
				match(GT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(120);
			regex();
			setState(121);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Escape_operandContext extends ParserRuleContext {
		public Escape_punctualContext escape_punctual() {
			return getRuleContext(Escape_punctualContext.class,0);
		}
		public Escape_specialContext escape_special() {
			return getRuleContext(Escape_specialContext.class,0);
		}
		public Escape_operandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escape_operand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterEscape_operand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitEscape_operand(this);
		}
	}

	public final Escape_operandContext escape_operand() throws RecognitionException {
		Escape_operandContext _localctx = new Escape_operandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_escape_operand);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ESC:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				escape_punctual();
				}
				break;
			case TAB:
			case LF:
			case CR:
			case OTH_ESC:
			case DEFINED_CH:
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				escape_special();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Escape_punctualContext extends ParserRuleContext {
		public List<TerminalNode> ESC() { return getTokens(RegexParser.ESC); }
		public TerminalNode ESC(int i) {
			return getToken(RegexParser.ESC, i);
		}
		public TerminalNode STAR() { return getToken(RegexParser.STAR, 0); }
		public TerminalNode PLUS() { return getToken(RegexParser.PLUS, 0); }
		public TerminalNode DOT() { return getToken(RegexParser.DOT, 0); }
		public TerminalNode QUESTION() { return getToken(RegexParser.QUESTION, 0); }
		public TerminalNode LBRACE() { return getToken(RegexParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(RegexParser.RBRACE, 0); }
		public TerminalNode LPAREN() { return getToken(RegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(RegexParser.RPAREN, 0); }
		public TerminalNode LBRACK() { return getToken(RegexParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(RegexParser.RBRACK, 0); }
		public TerminalNode CARET() { return getToken(RegexParser.CARET, 0); }
		public TerminalNode DOLLAR() { return getToken(RegexParser.DOLLAR, 0); }
		public TerminalNode OR() { return getToken(RegexParser.OR, 0); }
		public TerminalNode SLASH() { return getToken(RegexParser.SLASH, 0); }
		public Escape_punctualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escape_punctual; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterEscape_punctual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitEscape_punctual(this);
		}
	}

	public final Escape_punctualContext escape_punctual() throws RecognitionException {
		Escape_punctualContext _localctx = new Escape_punctualContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_escape_punctual);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(ESC);
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << RPAREN) | (1L << LBRACE) | (1L << RBRACE) | (1L << LBRACK) | (1L << RBRACK) | (1L << QUESTION) | (1L << STAR) | (1L << SLASH) | (1L << PLUS) | (1L << OR) | (1L << DOLLAR) | (1L << DOT) | (1L << ESC) | (1L << CARET))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DigitContext extends ParserRuleContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public OctalContext octal() {
			return getRuleContext(OctalContext.class,0);
		}
		public HexContext hex() {
			return getRuleContext(HexContext.class,0);
		}
		public DigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_digit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitDigit(this);
		}
	}

	public final DigitContext digit() throws RecognitionException {
		DigitContext _localctx = new DigitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_digit);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				dec();
				}
				break;
			case OCTAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				octal();
				}
				break;
			case HEX:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				hex();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(RegexParser.NUMBER, 0); }
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RegexListener ) ((RegexListener)listener).exitDec(this);
		}
	}
